Update NOTEBOOK 02 - Tipos de datos y Variables.ipynb

--- a/Estudiantes/Adrian Barboza/NOTEBOOK 02 - Tipos de datos y Variables.ipynb
+++ b/Estudiantes/Adrian Barboza/NOTEBOOK 02 - Tipos de datos y Variables.ipynb
@@ -606,15 +606,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño de la lista 6\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# Imprimir la cantidad elementos"
+    "# Imprimir la cantidad elementos\n",
+    "lista_numeros = [1,2,3,4,5,6]\n",
+    "\n",
+    "cantidad = len(lista_numeros)\n",
+    "\n",
+    "print(f\"Tamaño de la lista {cantidad}\")"
    ]
   },
   {
@@ -632,29 +641,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Outlook', 'Hotmail', 'Gmail', 'Yahoo']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "#append(): Este método agrega un elemento al final de la lista\n",
-    "correos = [\"Outlook\",\"Hotmail\",\"Gmail\"]"
+    "correos = [\"Outlook\",\"Hotmail\",\"Gmail\"]\n",
+    "correos.append(\"Yahoo\")\n",
+    "\n",
+    "print(correos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Outlook', 'Proton Mail', 'Hotmail', 'Gmail', 'Yahoo']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "#insert(): Este método agrega un elemento en una posición específica"
+    "#insert(): Este método agrega un elemento en una posición específica\n",
+    "correos.insert(1,\"Proton Mail\")\n",
+    "print(correos)"
    ]
   },
   {
@@ -666,31 +688,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Word', 'Excel', 'Power Point']\n",
+      "['Word', 'Excel', 'Power Point', 'Acces', 'Visio', 'Skype']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# extend() Agrega los elementos de una lista iterable al final de la lista original\n",
     "paquete = ['Word','Excel','Power Point']\n",
-    "adicional = ['Acces','Visio','Skype']"
+    "adicional = ['Acces','Visio','Skype']\n",
+    "\n",
+    "print(paquete)\n",
+    "\n",
+    "paquete.extend(adicional)\n",
+    "\n",
+    "print(paquete)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Word', 'Excel', 'Power Point', 'Acces', 'Visio', 'Skype']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
+   "source": [
+    "paquete = ['Word','Excel','Power Point']\n",
+    "adicional = ['Acces','Visio','Skype']\n",
+    "\n",
+    "paquete_pro = paquete + adicional\n",
+    "\n",
+    "print(paquete_pro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "#Repitir listas utilizando operador de multiplicación (*)\n",
-    "Lista1 = [1,2,3]"
+    "Lista1 = [1,2,3]\n",
+    "\n",
+    "Lista_duplicada = Lista1 * 2\n",
+    "\n",
+    "print(Lista_duplicada)"
    ]
   },
   {
@@ -706,54 +769,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Outlook', 'Proton Mail', 'Proton Mail', 'Hotmail', 'Gmail', 'Yahoo']\n",
+      "['Outlook', 'Proton Mail', 'Hotmail', 'Gmail', 'Yahoo']\n",
+      "['Outlook', 'Hotmail', 'Gmail', 'Yahoo']\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "#remove(): Este método elimina el primer elemento de la lista que coincida\n",
+    "correos.insert(2,'Proton Mail')\n",
+    "print(correos)\n",
+    "correos.remove('Proton Mail')\n",
+    "print(correos)\n",
+    "\n",
+    "correos.remove(correos[1]) \n",
+    "print(correos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Outlook', 'Proton Mail', 'Proton Mail', 'Gmail', 'Yahoo']\n",
+      "['Proton Mail', 'Gmail', 'Yahoo']\n",
+      "El elemento eliminado es: Proton Mail\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop(): Este método elimina y devuelve el elemento en una posición específica de la lista por medio del índice.\n",
+    "\n",
+    "correos.insert(1,'Proton Mail')\n",
+    "\n",
+    "print(correos)\n",
+    "\n",
+    "eliminado = correos.pop(2)\n",
+    "\n",
+    "correos.pop(0)\n",
+    "\n",
+    "print(correos)\n",
+    "print('El elemento eliminado es:',eliminado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Proton Mail', 'Gmail', 'Yahoo']\n",
+      "['Proton Mail', 'Gmail']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#del Elimina elemento por índice\n",
+    "\n",
+    "print(correos)\n",
+    "del(correos[2])\n",
+    "\n",
+    "print(correos)\n",
+    "\n",
+    "len(correos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Proton Mail', 'Gmail']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear(): este métolo eliminar los elementos de una lista \n",
+    "\n",
+    "print(correos)\n",
+    "correos.clear()\n",
+    "print(correos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#remove(): Este método elimina el primer elemento de la lista que coincida"
+    "correos = [1,2]\n",
+    "\n",
+    "\n",
+    "del correos\n",
+    "\n",
+    "\n",
+    "\n",
+    "correos = [1,2]\n",
+    "\n",
+    "\n",
+    "correos = None\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#pop(): Este método elimina y devuelve el elemento en una posición específica de la lista por medio del índice."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#del Elimina elemento por índice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#clear(): este métolo eliminar los elementos de una lista "
+    "lista =[1,1,100.85,'Hola']"
    ]
   },
   {
@@ -778,15 +931,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "a\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "#Acceder a elementos de una tupla:\n",
+    "tupla = (1,2,3,'a','b','c')\n",
+    "\n",
+    "print(tupla[2]) # 2\n",
+    "print(tupla[3]) # 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Utilizar una tupla en un ciclo for:\n",
+    "\n",
+    "tupla = (1,2,3,'a','b','c')\n",
+    "for elemento in tupla:\n",
+    "    print(elemento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Acceder a elementos de una tupla:"
+    "#Asignar valores de una tupla a variables:\n",
+    "\n",
+    "tupla_persona = ('')"
    ]
   },
   {
@@ -799,46 +998,72 @@
    },
    "outputs": [],
    "source": [
-    "#Utilizar una tupla en un ciclo for:"
+    "#Concatenar dos tuplas:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido Juan\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "#Asignar valores de una tupla a variables:"
+    "#Comprobar si un elemento está en una tupla: Se puede usar el operador in para verificar si un elemento está presente en una tupla.\n",
+    "\n",
+    "tupla_persona = ('Juan','Pérez',25)\n",
+    "\n",
+    "\n",
+    "if 'Juan' in tupla_persona:\n",
+    "    print('Bienvenido Juan')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c', 'Juan', 'Pérez', 25)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "#Concatenar dos tuplas:"
+    "nueva_tupla = tupla + tupla_persona\n",
+    "print(nueva_tupla)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pérez\n",
+      "Pérez\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "#Comprobar si un elemento está en una tupla: Se puede usar el operador in para verificar si un elemento está presente en una tupla.\n"
+    "#Asignar valores de una tupla a variables:\n",
+    "tupla_persona = ('Juan','Pérez',25)\n",
+    "nombre,apellido, edad = tupla_persona\n",
+    "\n",
+    "\n",
+    "print(tupla_persona[1])\n",
+    "print(apellido)"
    ]
   },
   {
@@ -888,14 +1113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "powershell"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c')\n",
+      "Posición:  4\n"
+     ]
+    }
+   ],
    "source": [
+    "print(tupla)\n",
     "posicion = tupla.index('b')\n",
     "print(\"Posición: \", posicion)"
    ]
@@ -950,19 +1185,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "powershell"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "#Concatenar dos tuplas\n",
     "Tupla1 = (1,2,3)\n",
     "Tupla2 = (4,5,6)\n",
     "Tupla3 = Tupla1 + Tupla2\n",
     "print(Tupla3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = ('a','b','c')\n",
+    "print(max(tupla))\n",
+    "print(min(tupla))"
    ]
   },
   {
@@ -985,15 +1252,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adrian\n",
+      "<class 'str'>\n",
+      "98.4\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "#Crear un diccionario\n",
+    "\n",
+    "estudiante = {\n",
+    "    'nombre' : 'Adrian',\n",
+    "    'apellido' : 'Barboza',\n",
+    "    'edad': 43,\n",
+    "    'nota': 88.40\n",
+    "}\n",
+    "print(estudiante['nombre']) # Imprime : Fiorella\n",
+    "print(type(estudiante['nombre']))\n",
+    "\n",
+    "\n",
+    "#Modificar valor en un diccionario\n",
+    "estudiante['nota'] = 98.40\n",
+    "print(estudiante['nota']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nombre': 'Adrian', 'apellido': 'Barboza', 'edad': 43, 'nota': 98.4, ('altura',): 1.69, 'estado_civil': 'Soltero'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Agregar nuevos pares clave-valor a un diccionario\n",
+    "\n",
+    "estudiante['altura',] = 1.69\n",
+    "estudiante['estado_civil'] = 'Soltero'\n",
+    "print(estudiante)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clave: nombre , valor : Adrian\n",
+      "Clave: apellido , valor : Barboza\n",
+      "Clave: edad , valor : 43\n",
+      "Clave: nota , valor : 98.4\n",
+      "Clave: ('altura',) , valor : 1.69\n",
+      "Clave: estado_civil , valor : Soltero\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Recorriendo Claves y valores en For\n",
+    "\n",
+    "for clave,valor in estudiante.items():\n",
+    "    print(f'Clave: {clave} , valor : {valor}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre : Adrian\n",
+      "apellido : Barboza\n",
+      "edad : 43\n",
+      "nota : 98.4\n",
+      "('altura',) : 1.69\n",
+      "estado_civil : Soltero\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elementos in estudiante:\n",
+    "    print(elementos, \":\", estudiante[elementos])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre\n",
+      "apellido\n",
+      "edad\n",
+      "nota\n",
+      "('altura',)\n",
+      "estado_civil\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elementos in estudiante:\n",
+    "    print(elementos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'estado_civil'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Eliminar elementos del diccionario\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mestudiante\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mestado_civil\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(estudiante)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'estado_civil'"
+     ]
+    }
+   ],
+   "source": [
+    "#Eliminar elementos del diccionario\n",
+    "del estudiante['estado_civil']\n",
+    "print(estudiante)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Crear un diccionario"
+    "estudiante.clear() #Limpia claves y valores\n",
+    "del estudiante # Elimina de memoria\n",
+    "estudiante.pop[1] # Elimina por índice"
    ]
   },
   {
@@ -1006,46 +1419,8 @@
    },
    "outputs": [],
    "source": [
-    "#Agregar nuevos pares clave-valor a un diccionario"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Recorriendo Claves y valores en For"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Eliminar elementos del diccionario"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "powershell"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Comprobar si una clave existe en el diccionario\n"
+    "#Comprobar si una clave existe en el diccionario\n",
+    "\n"
    ]
   },
   {
