Sesion 4 Adrian Barboza

--- a/Estudiantes/Adrian Barboza/NOTEBOOK 03 - PARTE I Ejecución Condicional, Bucles, Listas y su Procesamiento.ipynb
+++ b/Estudiantes/Adrian Barboza/NOTEBOOK 03 - PARTE I Ejecución Condicional, Bucles, Listas y su Procesamiento.ipynb
@@ -13,7 +13,7 @@
                 "\n",
                 "## Profesor: Ing. Andrés Mena Abarca\n",
                 "\n",
-                "### <mark>**Nombre del estudiante:**</mark>\n",
+                "### <mark>**Nombre del estudiante:**</mark> Adrian Barboza Chavarría\n",
                 "\n",
                 "* * *\n",
                 "\n",
@@ -37,12 +37,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {
                 "azdata_cell_guid": "65553934-e4e4-4b44-aa2e-b234d1a33667",
                 "language": "python"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "¿Es 10 mayor que 20? False\n",
+                        "¿Es 10 igual a 20? False\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Ejemplo de valores booleanos\n",
                 "x = 10\n",
@@ -87,14 +96,65 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {
                 "azdata_cell_guid": "26417c6c-aa5d-41a9-b7c7-fa268a476a6d",
                 "language": "python"
             },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "El primer participante NO es elegible para la competencia.\n",
+                        "El segundo participante NO es elegible para la competencia.\n",
+                        "El primer participante es mayor que el segundo.\n"
+                    ]
+                }
+            ],
+            "source": [
+                "#Respuesta\n",
+                "# Solicitar edades de los participantes\n",
+                "edad1 = int(input(\"Ingrese la edad del primer participante: \"))\n",
+                "edad2 = int(input(\"Ingrese la edad del segundo participante: \"))\n",
+                "\n",
+                "# Verificar elegibilidad\n",
+                "if 18 <= edad1 <= 30:\n",
+                "    print(\"El primer participante es elegible para la competencia.\")\n",
+                "else:\n",
+                "    print(\"El primer participante NO es elegible para la competencia.\")\n",
+                "\n",
+                "if 18 <= edad2 <= 30:\n",
+                "    print(\"El segundo participante es elegible para la competencia.\")\n",
+                "else:\n",
+                "    print(\"El segundo participante NO es elegible para la competencia.\")\n",
+                "\n",
+                "# Comparar edades\n",
+                "if edad1 > edad2:\n",
+                "    print(\"El primer participante es mayor que el segundo.\")\n",
+                "elif edad1 < edad2:\n",
+                "    print(\"El segundo participante es mayor que el primero.\")\n",
+                "else:\n",
+                "    print(\"Ambos participantes tienen la misma edad.\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
             "outputs": [],
             "source": [
-                "#Respuesta"
+                "\n",
+                "\n",
+                "edad1 = int(input(\"Ingrese la edad del primer participante: \"))\n",
+                "edad2 = int(input(\"Ingrese la edad del segundo participante: \"))\n",
+                "\n",
+                "\n",
+                "participante1 = (edad1 >= 18 and edad1 <= 30)\n",
+                "\n",
+                "\n",
+                "print((edad1 >= 18 and edad1 <= 30))\n",
+                "print('El participante numero 1 ingresa', participante1)"
             ]
         },
         {
@@ -141,15 +201,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {
                 "azdata_cell_guid": "ac546c59-6cc2-47f1-8b71-daeb61c6475c",
                 "language": "python"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "La calificación : 10.0 corresponde a nota 'F'. Cuidado, REPROBADO!\n"
+                    ]
+                }
+            ],
             "source": [
                 "#Respuesta\n",
-                "# Ejemplo mejorado: Clasificación de calificaciones de un estudiante\n"
+                "# Ejemplo mejorado: Clasificación de calificaciones de un estudiante\n",
+                "\n",
+                "\n",
+                "try:\n",
+                "    calificacion = float(input('Ingrese la calificacion del estudiante (0 a 100):'))\n",
+                "\n",
+                "    if calificacion >= 90:\n",
+                "        print(f\"La calificación : {calificacion} corresponde a nota 'A'. Excelente Trabajo!\")\n",
+                "    elif calificacion >= 80:\n",
+                "        print(f\"La calificación : {calificacion} corresponde a nota 'B'. Buen Trabajo!\")\n",
+                "    elif calificacion >= 70:\n",
+                "        print(f\"La calificación : {calificacion} corresponde a nota 'C'. Puedes mejorar!\")\n",
+                "    elif calificacion >= 60:\n",
+                "        print(f\"La calificación : {calificacion} corresponde a nota 'D'. Cuidado, debes esforzarte más!\")\n",
+                "    else:\n",
+                "        print(f\"La calificación : {calificacion} corresponde a nota 'F'. Cuidado, REPROBADO!\")\n",
+                "except ValueError:\n",
+                "    print('Error: Por favor ingrese un valor válido')\n",
+                "    "
             ]
         },
         {
@@ -210,14 +296,62 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {
                 "azdata_cell_guid": "12496b36-600f-4f59-8607-58eafbbac4e5",
                 "language": "python"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Itera 0\n",
+                        "Itera 1\n",
+                        "Itera 2\n",
+                        "Itera 3\n",
+                        "Itera 4\n",
+                        "Itera 5\n",
+                        "Itera 6\n",
+                        "Itera 7\n",
+                        "Itera 8\n",
+                        "Itera 9\n"
+                    ]
+                }
+            ],
             "source": [
-                "# Ejemplo de bucle for"
+                "# Ejemplo de bucle for\n",
+                "for i in range(10):\n",
+                "    print(f'Itera {i}')"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "1\n",
+                        "2\n",
+                        "3\n",
+                        "4\n",
+                        "5\n",
+                        "6\n",
+                        "7\n",
+                        "8\n",
+                        "9\n",
+                        "10\n"
+                    ]
+                }
+            ],
+            "source": [
+                "suma = 0\n",
+                "\n",
+                "for numero in range(1,11):\n",
+                "    print(numero)"
             ]
         },
         {
@@ -235,14 +369,36 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {
                 "azdata_cell_guid": "49c58740-3080-45a0-b119-c5b144581977",
                 "language": "python"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "La suma total es: 45\n",
+                        "La suma total es: 45\n"
+                    ]
+                }
+            ],
             "source": [
-                "#Respuesta\n"
+                "#Respuesta\n",
+                "suma = 0\n",
+                "\n",
+                "for numero in range(1,10):\n",
+                "    suma = suma + numero\n",
+                "\n",
+                "print(f'La suma total es: {suma}')\n",
+                "\n",
+                "suma = 0\n",
+                "\n",
+                "for numero in range(1,10):\n",
+                "    suma += numero # es igual a suma = suma + numero\n",
+                "\n",
+                "print(f'La suma total es: {suma}')"
             ]
         },
         {
@@ -259,15 +415,31 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "metadata": {
                 "azdata_cell_guid": "a3aaa670-2151-4756-9264-85312d17674a",
                 "language": "python",
                 "tags": []
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Suma total 55\n"
+                    ]
+                }
+            ],
             "source": [
-                "# Ejemplo de bucle while\n"
+                "# Ejemplo de bucle while\n",
+                "contador = 1\n",
+                "suma = 0\n",
+                "final_suma = int(input('Ingrese el numero final: '))\n",
+                "while contador <= final_suma:\n",
+                "    # print(f'Iteración: {contador}')\n",
+                "    suma += contador\n",
+                "    contador += 1  #contador = contador + 1\n",
+                "print(f'Suma total {suma}')"
             ]
         },
         {
@@ -631,14 +803,41 @@
             "outputs": [],
             "source": [
                 "estudiantes = []\n",
+                "\n",
+                "\n",
+                "def agregar_estudiante():\n",
+                "    nombre = input(\"Ingrese el nombre del estudiante: \")\n",
+                "    estudiantes.append(nombre)\n",
+                "    print('\\n Estudiante agregado exitosamente! \\n')\n",
+                "\n",
+                "\n",
+                "def imprimir_lista():\n",
+                "    print('\\n --------------  Lista de estudiantes ----------------- \\n')\n",
+                "    for elemento in estudiantes:\n",
+                "        print(f'Estudiante: {elemento}')\n",
+                "\n",
+                "\n",
                 "while True:\n",
-                "    print('\\'nSeleccione una opción:')\n",
+                "    print('\\n Seleccione una opción:')\n",
                 "    print('1. Agregar nuevo estudiante')\n",
                 "    print('2. Ver la lista completa de estudiantes')\n",
                 "    print('3. Ver un estudiante en particular')\n",
                 "    print('4. Salir')\n",
-                "    \n",
+                "\n",
+                "\n",
                 "    menu  = input('Ingrese la opción')\n",
+                "    \n",
+                "    if menu == '1':\n",
+                "       agregar_estudiante()\n",
+                "    elif menu == '2':\n",
+                "       imprimir_lista()\n",
+                "    elif menu == '3':\n",
+                "        print('\\nbuscar estudiante')\n",
+                "    elif menu == '4':\n",
+                "        print('Saliendo del programa ........')\n",
+                "        break\n",
+                "    else:\n",
+                "        print('Opción no válida, intente de nuevo: ')\n",
                 "\n",
                 "    \n"
             ]
@@ -660,7 +859,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.7"
+            "version": "3.13.1"
         }
     },
     "nbformat": 4,
