Proyecto Corto Adrian Barboza_Inclusion Link GitHub

--- a/Estudiantes/ProyectoCorto_LaClinica/Proyecto Corto - Reto STEAM Explorando Datos de Pacientes en una Clínica.ipynb
+++ b/Estudiantes/ProyectoCorto_LaClinica/Proyecto Corto - Reto STEAM Explorando Datos de Pacientes en una Clínica.ipynb
@@ -10,6 +10,7 @@
     "## Programacion Python Basico | ICAI - UNA\n",
     "## Profesor: Ing. Andrés Mena Abarca\n",
     "### Nombre del estudiante: Adrian Barboza Chavarría\n",
+    "Link GitHub: https://github.com/abarboza506/Programacion-Python-Basico-GRUPO-1---6181133432/commit/43b7ec956158962f99e71b90f0a0b15c440372c2\n",
     "* * *"
    ]
   },
